# api-musica

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  testes.ipynb
